--- a/packages/eslint-config-prettier-typescript-next/package.json
+++ b/packages/eslint-config-prettier-typescript-next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-prettier",
+  "name": "eslint-config-prettier-typescript-next",
   "version": "1.0.1",
   "main": "index.js",
   "publishConfig": {
