--- a/packages/eslint-config-prettier-typescript-next/package.json
+++ b/packages/eslint-config-prettier-typescript-next/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "eslint-config-prettier-typescript-next",
+  "name": "@riazguzman/eslint-config-prettier-typescript-next",
   "version": "1.0.1",
   "main": "index.js",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@riazguzman"
+    "registry": "https://npm.pkg.github.com"
   },
   "repository": "https://github.com/riazguzman/eslint-config-templates.git",
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "3793b361f3f2884a05278d850848da6283c876f5"
 }
