--- a/packages/eslint-config-prettier-typescript/package.json
+++ b/packages/eslint-config-prettier-typescript/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@riazguzman/eslint-config-prettier-typescript",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "main": "index.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
-  "repository": "https://github.com/riazguzman/eslint-config-templates.git",
-  "license": "MIT",
-  "gitHead": "3793b361f3f2884a05278d850848da6283c876f5"
+  "repository": "https://github.com/designed-and-developed/eslint-config-templates.git",
+  "license": "MIT"
 }
