--- a/packages/eslint-config-prettier/package.json
+++ b/packages/eslint-config-prettier/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@riazguzman/eslint-config-prettier",
+  "name": "@designed-and-developed/eslint-config-prettier",
   "version": "1.0.1",
   "main": "index.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
   "repository": "https://github.com/designed-and-developed/eslint-config-templates.git",
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde"
 }
