--- a/packages/eslint-config-prettier-typescript-react/package.json
+++ b/packages/eslint-config-prettier-typescript-react/package.json
@@ -7,5 +7,10 @@
   },
   "repository": "https://github.com/designed-and-developed/eslint-config-templates.git",
   "license": "MIT",
-  "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde"
+  "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde",
+  "dependencies": {
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0"
+  }
 }
