--- a/packages/eslint-config-prettier-typescript/package.json
+++ b/packages/eslint-config-prettier-typescript/package.json
@@ -7,5 +7,14 @@
   },
   "repository": "https://github.com/designed-and-developed/eslint-config-templates.git",
   "license": "MIT",
-  "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde"
+  "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde",
+  "dependencies": {
+    "@designed-and-developed/eslint-config-prettier": "1.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.10.1"
+  },
+  "peerDependencies": {
+    "eslint": "^7.32.0 || ^8.2.0",
+    "prettier": "^1.18.2 || ^2.0.0",
+    "typescript": ">=3.3.1"
+  }
 }
