--- a/packages/eslint-config-prettier-typescript-react/package.json
+++ b/packages/eslint-config-prettier-typescript-react/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-config-airbnb": "^19.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "17.0.37"
   }
 }
