--- a/packages/eslint-config-prettier-typescript-react/package.json
+++ b/packages/eslint-config-prettier-typescript-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@designed-and-developed/eslint-config-prettier-typescript-react",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "index.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -9,10 +9,10 @@
   "license": "MIT",
   "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde",
   "dependencies": {
+    "eslint-config-airbnb": "^19.0.2",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-config-airbnb": "^19.0.2"
+    "eslint-plugin-react-hooks": "^4.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.37"
