--- a/packages/eslint-config-prettier-typescript-react/package.json
+++ b/packages/eslint-config-prettier-typescript-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@designed-and-developed/eslint-config-prettier-typescript-react",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "index.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -9,7 +9,7 @@
   "license": "MIT",
   "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde",
   "dependencies": {
-    "@designed-and-developed/eslint-config-prettier-typescript": "1.0.3",
+    "@designed-and-developed/eslint-config-prettier-typescript": "^1.0.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0"
