--- a/packages/eslint-config-prettier-typescript/package.json
+++ b/packages/eslint-config-prettier-typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@designed-and-developed/eslint-config-prettier-typescript",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "main": "index.js",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -9,7 +9,7 @@
   "license": "MIT",
   "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde",
   "dependencies": {
-    "@designed-and-developed/eslint-config-prettier": "1.0.5",
+    "@designed-and-developed/eslint-config-prettier": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^5.10.1"
   },
   "peerDependencies": {
