--- a/packages/eslint-config-prettier-typescript/package.json
+++ b/packages/eslint-config-prettier-typescript/package.json
@@ -10,7 +10,8 @@
   "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde",
   "dependencies": {
     "@designed-and-developed/eslint-config-prettier": "^1.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.10.1"
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1"
   },
   "peerDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
