--- a/packages/eslint-config-prettier-typescript/package.json
+++ b/packages/eslint-config-prettier-typescript/package.json
@@ -17,5 +17,8 @@
     "eslint": "^7.32.0 || ^8.2.0",
     "prettier": "^1.18.2 || ^2.0.0",
     "typescript": ">=3.3.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
