--- a/packages/eslint-config-prettier/package.json
+++ b/packages/eslint-config-prettier/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "@types/react": "17.0.37",
     "standard-version": "9.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
