--- a/packages/eslint-config-prettier-typescript-next/package.json
+++ b/packages/eslint-config-prettier-typescript-next/package.json
@@ -1,14 +1,11 @@
 {
   "name": "@designed-and-developed/eslint-config-prettier-typescript-next",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "index.js",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "access": "public"
   },
   "repository": "https://github.com/designed-and-developed/eslint-config-templates.git",
   "license": "MIT",
-  "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde",
-  "publishConfig": {
-    "access": "public"
-  }
+  "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde"
 }
