--- a/packages/eslint-config-prettier-typescript-next/package.json
+++ b/packages/eslint-config-prettier-typescript-next/package.json
@@ -2,10 +2,10 @@
   "name": "@designed-and-developed/eslint-config-prettier-typescript-next",
   "version": "1.0.3",
   "main": "index.js",
-  "publishConfig": {
-    "access": "public"
-  },
   "repository": "https://github.com/designed-and-developed/eslint-config-templates.git",
   "license": "MIT",
-  "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde"
+  "gitHead": "936ed953f754bf91d5396201e0dbe635c3690bde",
+  "publishConfig": {
+    "access": "public"
+  }
 }
